<resources>
    <string name="app_name">Todo App</string>

    <!-- LoginActivity -->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_failed">Login failed!</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="validation_failed">Validation failed</string>

    <!-- RegisterActivity -->
    <string name="repeat_password">Repeat password</string>
    <string name="empty_email">Please enter a valid E-mail address</string>
    <string name="empty_password">Please enter a password</string>
    <string name="empty_repeat_password">Please repeat the password</string>
    <string name="no_password_match">The password\'s don\'t match</string>
    <string name="register_success">Account created!</string>

    <!-- TodoCollectionsActivity -->
    <string name="create_collection">Create Collection</string>
    <string name="collections_failed">Failed to get collections</string>

    <!-- CreateTodoCollection Activity -->
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="create_todo_collection_failed">Creating collection failed</string>

    <!-- TodosActivity -->
    <string name="loading_todos_failed">Loading todo\'s failed</string>
    <string name="create_todo">Create Todo</string>
</resources>